--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
-<script src="your-script.js"></script> <!-- Caminho para o seu script JS -->
+<script type="module" src="your-script.js"></script>
+ <!-- Caminho para o seu script JS -->
 
 </body>
 </html>
