--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
     </table>
 </div>
 
+<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+
+<!-- Add Firebase products that you want to use -->
 <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
-<script type="module" src="your-script.js"></script>
- <!-- Caminho para o seu script JS -->
+
+<script src="your-script.js"></script> <!-- Remova type="module" -->
 
 </body>
 </html>
