--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Amigo Secreto</title>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div>
+<div class="main-container">
     <h1>Amigo Secreto</h1>
-    <input type="text" id="nameInput" placeholder="Digite seu nome">
-    <button onclick="submitName()">Enviar</button>
-</div>
+    <div class="input-group">
+        <label for="nameInput">Digite seu nome:</label>
+        <input type="text" id="nameInput" placeholder="Nome">
+        <button onclick="submitName()">Enviar</button>
+    </div>
 
-<div>
-    <h2>Participantes</h2>
-    <table id="participantsTable">
-        <tr>
-            <th>Nome</th>
-            <th>Data e Hora</th>
-        </tr>
-        <!-- Os participantes serão inseridos aqui -->
-    </table>
+    <div class="participants-section">
+        <h2>Participantes</h2>
+        <table id="participantsTable">
+            <tr>
+                <th>Nome</th>
+                <th>Data e Hora</th>
+            </tr>
+            <!-- Os participantes serão inseridos aqui -->
+        </table>
+    </div>
 </div>
 
 <script type="module">
@@ -74,9 +77,9 @@ onValue(ref(database, 'participants'), (snapshot) => {
     });
 });
 
-// Formata a data e hora para um formato mais legível
+// Formata a data e hora para um formato mais legível (24 horas)
 function formatDateTime(isoString) {
-  const options = { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
+  const options = { day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false };
   return new Date(isoString).toLocaleDateString('pt-BR', options);
 }
 
