--- a/index.html
+++ b/index.html
@@ -56,9 +56,15 @@
 
 window.submitName = function() {
     const nameInput = document.getElementById('nameInput');
-    const name = nameInput.value;
+    const name = nameInput.value.trim(); // Remove espaços em branco no início e no final
     const dateTime = new Date().toISOString();
     const successMessage = document.getElementById('successMessage');
+
+    if (name === '') {
+        // Exibe uma mensagem de erro se o campo estiver vazio
+        alert('Por favor, insira seu nome.');
+        return; // Não envia os dados se o campo estiver vazio
+    }
 
     push(ref(database, 'participants'), {
         nome: name,
@@ -77,6 +83,7 @@ window.submitName = function() {
 
     nameInput.value = ''; // Limpa o campo de entrada
 }
+
 
 
 onValue(ref(database, 'participants'), (snapshot) => {
