--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <div class="main-container">
     <h1>Amigo Secreto</h1>
     <div class="input-group">
-        <label for="nameInput">Digite seu nome:</label>
+        <label for="nameInput" style="background-color: white; border-radius: 10px; padding: 5px;">Digite seu nome:</label>
         <input type="text" id="nameInput" placeholder="Nome">
         <button onclick="submitName()">Enviar</button>
     </div>
 
     <div class="counters">
-    <div id="chocolateCount">Chocolates🍫: 0</div>
-    <div id="moneyCount">Dinheiro💰: $0</div>
-</div>
+    <div id="chocolateCount" style="background-color: white; padding: 5px 10px; display: inline-block; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-weight: bold;">Chocolates🍫: 0</div>
+
+    <div id="moneyCount" style="background-color: white; padding: 5px 10px; display: inline-block; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-weight: bold;">Dinheiro💰: $0</div>
+    </div>
 
 
     <div id="successMessage" class="success-message hidden">Boaaa, ja ta na lista!!!</div>
