--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <div class="main-container">
     <h1>Amigo Secreto</h1>
     <div class="input-group">
-        <label for="nameInput" style="background-color: white; border-radius: 10px; padding: 5px;">Digite seu nome:</label>
+        <label for="nameInput" style="background-color: white; border-radius: 10px; padding: 5px; font-size: 20px;">Digite seu nome:</label>
         <input type="text" id="nameInput" placeholder="Nome">
-        <button onclick="submitName()">Enviar</button>
+        <button onclick="submitName()">CLIQUE PARA PARTICIPAR</button>
     </div>
 
     <div class="counters">
