--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="modalAviso" class="modal-aviso">
     <div class="modal-aviso-content">
-        <p class="modal-aviso-texto">BEM VINDO FAMILIA<br><br>SE FOR PARTICIPAR, SÓ COLOCAR O NOME E CLIAR EM "PARTICIPAR"<br><br>AI A GENTE JA VAI VENDO QUEM VAI PARTICIPAR E QUAL VAI SER OS PRÊMIOS</p>
+        <p class="modal-aviso-texto">BEM VINDO FAMILIA<br><br>SE FOR PARTICIPAR, SÓ COLOCAR O NOME E CLICAR EM "PARTICIPAR"<br><br>AI A GENTE JA VAI VENDO QUEM VAI PARTICIPAR E QUAL VAI SER OS PRÊMIOS</p>
         <button class="btn-entendi" onclick="fecharModalAviso()">Entendi</button>
     </div>
 </div>
@@ -23,11 +23,11 @@
         <button onclick="submitName()">PARTICIPAR</button>
     </div>
 
-            <label for="nameInput" style="background-color: white; border-radius: 10px; padding: 5px; font-size: 20px;">Total até agora(1 barra por pessoa + $10):</label>
+            <label for="nameInput" style="background-color: white; border-radius: 10px; padding: 5px; font-size: 35px;">Total até agora(1 barra por pessoa + $10):</label>
     <div class="counters">
-    <div id="chocolateCount" style="background-color: white; margin: 10px; padding: 5px 10px; display: inline-block; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-weight: bold;">Chocolates🍫: 0</div>
+    <div id="chocolateCount" style="background-color: white; margin: 10px; font-size: 30px; padding: 5px 10px; display: inline-block; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-weight: bold;">Chocolates🍫: 0</div>
 
-    <div id="moneyCount" style="background-color: white; padding: 5px 10px; display: inline-block; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-weight: bold;">Dinheiro💰: $0</div>
+    <div id="moneyCount" style="background-color: white; padding: 5px 10px; font-size: 30px; display: inline-block; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); font-weight: bold;">Dinheiro💰: $0</div>
     </div>
 
 
